--- a/style.css
+++ b/style.css
@@ -7,3 +7,29 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+section {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #e3f2fd;
+}
+button {
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  background-color: #4070f4;
+  border-radius: 6px;
+  border: none;
+  padding: 14px 22px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #265df2;
+}
+button.show-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
