--- a/style.css
+++ b/style.css
@@ -26,10 +26,45 @@ button {
 button:hover {
   background-color: #265df2;
 }
-button.show-modal {
+button.show-modal,
+.modal-box {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  pointer-events: none;
+}
+.modal-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 380px;
+  background-color: #fff;
+  border-radius: 24px;
+  padding: 30px 20px;
+}
+.modal-box i {
+  font-size: 70px;
+  color: #4070f4;
+}
+.modal-box h3 {
+  font-size: 25px;
+  font-weight: 600;
+  margin-top: 20px;
+  color: #333;
+}
+.modal-box p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #333;
 }
